ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### route:deny any 443 0.0.0.0/0 any 172.18.68.160 in_eth1
-A ufw-user-forward -i eth1 -p tcp --dport 443 -s 172.18.68.160 -j DROP
-A ufw-user-forward -i eth1 -p udp --dport 443 -s 172.18.68.160 -j DROP

### tuple ### route:deny any 80 0.0.0.0/0 any 172.18.68.160 in_eth1
-A ufw-user-forward -i eth1 -p tcp --dport 80 -s 172.18.68.160 -j DROP
-A ufw-user-forward -i eth1 -p udp --dport 80 -s 172.18.68.160 -j DROP

### tuple ### allow tcp 22 0.0.0.0/0 any 192.168.0.47 in_eth0
-A ufw-user-input -i eth0 -p tcp --dport 22 -s 192.168.0.47 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-output -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
